# WinnerLap

./: CMakeLists.txt  ReadMe.txt  Source.cpp  lapCalculator.cpp  lapCalculator.h  main.cpp  recordsReader.cpp  recordsReader.h
